# CmakePratice

t1/: CMakeLists.txt  README.md
t2/: CMakeLists.txt  README.md
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt  README.md
t3/lib/: CMakeLists.txt  hello.c
